# MomoProfitPredictor

./: .env.example  .gitignore  pyproject.toml
ai_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
our_app/: main.py
our_app/core/: config.py  loggings.py  mongodb_async.py  postgres.py
our_app/models/: momo.py
our_app/repositories/: momo_mongo_repo.py  momo_repo.py
our_app/routes/v1/: __init__.py  base.py  momo_route.py
our_app/services/v1/: momo_service.py
